# actor-benchmarks

./: Cargo.toml  README.md
benches/: actix.rs  coerce.rs  kameo.rs  ractor.rs  xtra.rs
